--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -94,7 +94,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/content"
         android:gravity="center"
-        android:text="确认注册"
+        android:text="确认"
         android:background="@drawable/btn_blue_seletor"/>
 
 </LinearLayout>
