--- a/app/src/main/res/layout/activity_social.xml
+++ b/app/src/main/res/layout/activity_social.xml
@@ -18,6 +18,7 @@
             android:layout_weight="1">
 
             <TextView
+                android:id="@+id/tvAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
@@ -43,6 +44,7 @@
             android:layout_weight="1">
 
             <TextView
+                android:id="@+id/tvDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
@@ -68,6 +70,7 @@
             android:layout_weight="1">
 
             <TextView
+                android:id="@+id/tvSort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
