--- a/app/src/main/res/layout/activity_extract.xml
+++ b/app/src/main/res/layout/activity_extract.xml
@@ -11,44 +11,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
         android:layout_marginTop="25dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp">
-        <TextView
-            android:id="@+id/tv1"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/content"
-            android:text="提现金额"
-            android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:textColor="@color/txt_333"/>
-
-        <EditText
-            android:id="@+id/etAccount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/content"
-            android:textColor="@color/txt_333"
-            android:textColorHint="@color/hint_color"
-            android:hint="请输入提现金额"
-            android:layout_centerVertical="true"
-            android:inputType="number"
-            android:background="@null"
-            android:padding="5dp"
-            android:layout_toRightOf="@id/tv1"/>
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/line"
-        android:layout_marginLeft="15dp"
-        android:background="@color/line_color"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
         android:layout_height="45dp">
         <TextView
             android:id="@+id/tv3"
@@ -79,6 +42,159 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/line"
+        android:layout_marginLeft="15dp"
+        android:background="@color/line_color"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp">
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/content"
+            android:text="用户名"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:textColor="@color/txt_333"/>
+
+        <EditText
+            android:id="@+id/etName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/content"
+            android:textColor="@color/txt_333"
+            android:textColorHint="@color/hint_color"
+            android:hint="请输入用户名或姓名"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:padding="5dp"
+            android:layout_toRightOf="@id/tv2"/>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line"
+        android:layout_marginLeft="15dp"
+        android:background="@color/line_color"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp">
+        <TextView
+            android:id="@+id/tv4"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/content"
+            android:text="账    号"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:textColor="@color/txt_333"/>
+
+        <EditText
+            android:id="@+id/etNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/content"
+            android:textColor="@color/txt_333"
+            android:textColorHint="@color/hint_color"
+            android:hint="支付宝、微信账号或银行卡卡号"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:padding="5dp"
+            android:layout_toRightOf="@id/tv4"/>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line"
+        android:layout_marginLeft="15dp"
+        android:background="@color/line_color"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp">
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/content"
+            android:text="提现金额"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:textColor="@color/txt_333"/>
+
+        <EditText
+            android:id="@+id/etAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/content"
+            android:textColor="@color/txt_333"
+            android:textColorHint="@color/hint_color"
+            android:hint="请输入提现金额（元）"
+            android:layout_centerVertical="true"
+            android:inputType="number"
+            android:background="@null"
+            android:padding="5dp"
+            android:layout_toRightOf="@id/tv1"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/rlBank"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:orientation="vertical">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:layout_marginLeft="15dp"
+            android:background="@color/line_color"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp">
+            <TextView
+                android:id="@+id/tv5"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/content"
+                android:text="开户行"
+                android:layout_marginRight="10dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:textColor="@color/txt_333"/>
+
+            <EditText
+                android:id="@+id/etBank"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/content"
+                android:textColor="@color/txt_333"
+                android:textColorHint="@color/hint_color"
+                android:hint="请输入开户行名称"
+                android:layout_centerVertical="true"
+                android:background="@null"
+                android:padding="5dp"
+                android:layout_toRightOf="@id/tv5"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line"
+        android:layout_marginLeft="15dp"
         android:background="@color/line_color"/>
 
     <Button
@@ -92,7 +208,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/content"
         android:gravity="center"
-        android:text="提现"
+        android:text="确定"
         android:background="@drawable/btn_blue_seletor"/>
 
 </LinearLayout>
