--- a/app/src/main/res/layout/activity_mymoney.xml
+++ b/app/src/main/res/layout/activity_mymoney.xml
@@ -41,11 +41,111 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/white">
+        <RelativeLayout
+            android:id="@+id/rlCyj"
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+            <ImageView
+                android:id="@+id/iv0"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@mipmap/ico_cyj"
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/iv0"
+                android:textSize="@dimen/content"
+                android:textColor="@color/txt_333"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:drawableRight="@mipmap/ico_arrow_right"
+                android:text="诚意金"/>
+
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:background="@color/line_color"
+            android:layout_marginLeft="15dp"/>
+
+        <RelativeLayout
+            android:id="@+id/rlJy"
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+            <ImageView
+                android:id="@+id/iv1"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@mipmap/ico_jy"
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/iv1"
+                android:textSize="@dimen/content"
+                android:textColor="@color/txt_333"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:drawableRight="@mipmap/ico_arrow_right"
+                android:text="交易明细"/>
+
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:background="@color/line_color"
+            android:layout_marginLeft="15dp"/>
+
+        <RelativeLayout
+            android:id="@+id/rlTx"
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+            <ImageView
+                android:id="@+id/iv2"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@mipmap/ico_qian"
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/iv2"
+                android:textSize="@dimen/content"
+                android:textColor="@color/txt_333"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:drawableRight="@mipmap/ico_arrow_right"
+                android:text="提现"/>
+
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:background="@color/line_color"
+            android:layout_marginLeft="15dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:visibility="gone"
             android:layout_weight="1">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -86,11 +186,13 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/line"
+            android:visibility="gone"
             android:background="@color/line_color"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:visibility="gone"
             android:layout_weight="1">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -130,12 +232,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/line"
+            android:visibility="gone"
             android:background="@color/line_color"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/background"
+            android:visibility="gone"
             android:layout_weight="1">
 
             <Button
