--- a/app/src/main/res/layout/banner_list_item.xml
+++ b/app/src/main/res/layout/banner_list_item.xml
@@ -24,6 +24,7 @@
         android:textColor="@color/txt_666"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="15dp"
+        android:gravity="center"
         android:layout_marginRight="15dp"/>
 
 </LinearLayout>
