--- a/app/src/main/res/layout/fgment_my.xml
+++ b/app/src/main/res/layout/fgment_my.xml
@@ -33,6 +33,22 @@
                 android:text="昵称"/>
 
         </LinearLayout>
+        
+        <ImageView
+            android:id="@+id/ivSet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ico_set"
+            android:padding="15dp"
+            android:layout_alignParentLeft="true"/>
+
+        <ImageView
+            android:id="@+id/ivMsg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ico_msg"
+            android:padding="15dp"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -105,15 +121,15 @@
                     android:textColor="@color/txt_333"/>
 
                 <TextView
-                    android:id="@+id/tvDz"
+                    android:id="@+id/tvWork"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:layout_gravity="center_vertical"
                     android:textSize="@dimen/title"
-                    android:text="岗位定制"
-                    android:drawableTop="@mipmap/ico_dz"
+                    android:text="我的工作"
+                    android:drawableTop="@mipmap/ico_work"
                     android:textColor="@color/txt_333"/>
             </LinearLayout>
             <View
@@ -136,6 +152,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvDz"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:textSize="@dimen/title"
+                android:text="岗位定制"
+                android:drawableTop="@mipmap/ico_dz"
+                android:textColor="@color/txt_333"/>
             <TextView
                 android:id="@+id/tvBs"
                 android:layout_width="0dp"
@@ -148,17 +176,7 @@
                 android:drawableTop="@mipmap/ico_bs"
                 android:textColor="@color/txt_333"/>
 
-            <TextView
-                android:id="@+id/tvShare"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:layout_gravity="center_vertical"
-                android:textSize="@dimen/title"
-                android:text="分享好友"
-                android:drawableTop="@mipmap/ico_share"
-                android:textColor="@color/txt_333"/>
+
         </LinearLayout>
             <View
                 android:layout_width="@dimen/line"
@@ -181,6 +199,17 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/tvShare"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="@dimen/title"
+                    android:text="分享好友"
+                    android:drawableTop="@mipmap/ico_share"
+                    android:textColor="@color/txt_333"/>
+                <TextView
                     android:id="@+id/tvFollow"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -198,6 +227,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:layout_gravity="center_vertical"
                     android:textSize="@dimen/title"
                     android:text="软件设置"
